--- a/src/app/modules/docente-capacitador/register-silabo/pages/register-silabo/register-silabo.component.html
+++ b/src/app/modules/docente-capacitador/register-silabo/pages/register-silabo/register-silabo.component.html
@@ -1,4 +1,4 @@
-<p>register-silabo works!</p>
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -515,9 +515,9 @@
            
         </div>
 
-        <pre>
+        <!-- <pre>
           {{datossilabo |  json}}
-       </pre>
+       </pre> -->
       
         <div class="mb-3">
           <button (click)="crearsilabo()" type="submit" class="btn btn-primary">Enviar</button>
