--- a/src/app/modules/participantes/edit-dts-participante/pages/edit-dts-participante/edit-dts-participante.component.html
+++ b/src/app/modules/participantes/edit-dts-participante/pages/edit-dts-participante/edit-dts-participante.component.html
@@ -6,7 +6,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                            <img src="https://cdn-icons-png.flaticon.com/512/4196/4196591.png" alt="Admin"
                                 class="rounded-circle" width="150">
                             <div class="mt-3">
 
@@ -175,17 +175,6 @@
                                     <small class="text-danger" *ngIf="!valnivel">Campo requerido.</small>
                                 </div>
                             </div>
-                            <!-- 
-                            <div class="row mb-3">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Hoja de Vida</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    <input type="text" class="form-control" id="inputhojav"
-                                        placeholder="Ingrese su hoja de vida" name="hojav"
-                                        [(ngModel)]="persona.hojavida">
-                                </div>
-                            </div> -->
                             <div class="row">
                                 <div class="col-sm-3"></div>
                                 <div class="col-sm-9 text-secondary">
