--- a/src/app/modules/super-admin/edit-list-admins/pages/edit-list-admins/edit-list-admins.component.html
+++ b/src/app/modules/super-admin/edit-list-admins/pages/edit-list-admins/edit-list-admins.component.html
@@ -28,7 +28,7 @@
       </div>
       <table class="table table-striped">
         <thead>
-          <tr>
+          <tr class="bg-primary text-light">
             <th scope="col">Cédula</th>
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
