--- a/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
+++ b/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="container mt-4">
-      <h2 class="mb-4">Formulario de Profesor</h2>
+      <h2 class="mb-4">Formulario de Admininstrador</h2>
       <form>
         <div class="row">
           <div class="col-md-6">
