--- a/src/app/modules/docente-capacitador/register-necesidad/pages/register-necesidad/register-necesidad.component.html
+++ b/src/app/modules/docente-capacitador/register-necesidad/pages/register-necesidad/register-necesidad.component.html
@@ -9,12 +9,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   </head>
   <body style="border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); " >
-    <div  style="" class="container mt-2">
+    <div class="container mt-2">
       <h1 style="margin-top: 15px; " class="text-center mb-5">Registro de la necesidad del curso</h1>
       <form id="contenedorform" [formGroup]="neceForm">
         <div class="">
           <div class="">
-            <h2 class="mb-3">Identiificador necesidad curso</h2>
+            <h2 class="mb-3">Identificador necesidad curso</h2>
             <input type="text" name="ncuIdentificador" class="form-control" [(ngModel)]="necesidad.ncuIdentificador" formControlName="ncuIdentificador" />
       
             <h2 class="mb-3">1. Lugar donde se dictara</h2>
@@ -27,7 +27,7 @@
               ></textarea>
             </div>
       
-            <label class="form-label">Dias</label>
+            <label class="form-label">Días</label>
             <select (change)="onSelectChange3($event.target)" [(ngModel)]="selectedId3.diaId" class="form-select" formControlName="dia">
               <option *ngFor="let clasedia of arraydias" [value]="clasedia.diaId">{{ clasedia.diaNombre }}</option>
             </select>
@@ -36,7 +36,7 @@
             <label class="form-label">Fecha prevista de Iniciación</label>
             <input type="date" formControlName="ncuFechaprevisfin" [(ngModel)]="necesidad.ncuFechaprevisfin" class="form-control" />
       
-            <label class="form-label">Numero de Participantes a ser inscritos</label>
+            <label class="form-label">Número de Participantes a ser inscritos</label>
             <input type="number" name="ncuNumparticipantes" class="form-control" [(ngModel)]="necesidad.ncuNumparticipantes" formControlName="ncuNumparticipantes" />
       
             <h2 class="mb-3">2. Resumen del curso y posible proyecto</h2>
@@ -49,7 +49,7 @@
               ></textarea>
             </div>
       
-            <h2 class="mb-3">3. Poblacion a quien se encuentra dirigido</h2>
+            <h2 class="mb-3">3. Población a quién se encuentra dirigido</h2>
             <div class="mb-3">
               <textarea
                 rows="3"
@@ -62,7 +62,7 @@
         </div>
       
         <div class="mb-3">
-          <button (click)="crearcurso()" type="submit" class="btn btn-primary" style="margin: 7px; padding-left: 100px; padding-right: 100px;">Enviar</button>
+          <button (click)="crearcurso()" type="submit" class="btn btn-primary" style="margin: 7px; padding-left: 100px; padding-right: 100px;">Guardar</button>
         </div>
       </form>
         <!-- <pre>
