--- a/src/app/modules/participantes/visualizar-programas--capacitacion/pages/visualizar-programas-capacitacion/visualizar-programas-capacitacion.component.html
+++ b/src/app/modules/participantes/visualizar-programas--capacitacion/pages/visualizar-programas-capacitacion/visualizar-programas-capacitacion.component.html
@@ -155,8 +155,8 @@
           <div class="card">
             <div class="card-body">
               <div class="d-flex flex-column align-items-center text-center">
-                <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle"
-                  width="150">
+                <img src="https://png.pngtree.com/png-vector/20190803/ourlarge/pngtree-teacher-education-presentation-school--flat-color-icon--vecto-png-image_1648907.jpg" alt="Admin" class="rounded-circle"
+                  width="250">
                 <div class="mt-3">
                   <h4>{{persona.nombre}} {{persona.apellido}}</h4>
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
@@ -206,7 +206,7 @@
                     <path fill-rule="evenodd"
                       d="M11.5 1a.5.5 0 0 1 0-1h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V1.707l-3.45 3.45A4 4 0 0 1 8.5 10.97V13H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V14H6a.5.5 0 0 1 0-1h1.5v-2.03a4 4 0 1 1 3.471-6.648L14.293 1H11.5zm-.997 4.346a3 3 0 1 0-5.006 3.309 3 3 0 0 0 5.006-3.31z" />
                   </svg>
-                  Genero
+                  Género
                 </h6>
                 <span class="text-secondary">{{persona.sexo}}</span>
               </li>
@@ -221,19 +221,6 @@
                 </h6>
                 <span class="text-secondary">{{persona.etnia}}</span>
               </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                <h6 class="mb-0">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-person-vcard" viewBox="0 0 16 16">
-                    <path
-                      d="M5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm4-2.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5ZM9 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4A.5.5 0 0 1 9 8Zm1 2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Z" />
-                    <path
-                      d="M2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2ZM1 4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H8.96c.026-.163.04-.33.04-.5C9 10.567 7.21 9 5 9c-2.086 0-3.8 1.398-3.984 3.181A1.006 1.006 0 0 1 1 12V4Z" />
-                  </svg>
-                  Hoja de vida
-                </h6>
-                <span class="text-secondary">{{persona.hojavida}}</span>
-              </li>
             </ul>
           </div>
         </div>
@@ -243,7 +230,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-sm-3">
-                  <h6 class="mb-0">Cedula</h6>
+                  <h6 class="mb-0">Cédula</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
                   {{persona.cedula}}
@@ -261,7 +248,7 @@
               <hr>
               <div class="row">
                 <div class="col-sm-3">
-                  <h6 class="mb-0">Telefono:</h6>
+                  <h6 class="mb-0">Teléfono:</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
                   {{persona.telefono}}
