--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -160,8 +160,7 @@
               data-bs-toggle="dropdown"
             >
               <i class="bi bi-person"></i>
-              <span class="d-none d-md-block dropdown-toggle ps-2"
-                >{{nombreUsuario}}</span>
+              <span class="d-none d-md-block dropdown-toggle ps-2">{{nombreUsuario}}</span>
                 <span class="user-desc">{{nombreRol}}</span>
                </a
             ><!-- End Profile Iamge Icon -->
@@ -180,7 +179,7 @@
               <li>
                 <a
                   class="dropdown-item d-flex align-items-center"
-                  href="users-profile.html"
+                  (click)="goToeditprofile($event)"
                 >
                   <i class="bi bi-person"></i>
                   <span>Mi Perfil</span>
@@ -191,35 +190,9 @@
               </li>
 
               <li>
-                <a
-                  class="dropdown-item d-flex align-items-center"
-                  href="users-profile.html"
-                >
-                  <i class="bi bi-gear"></i>
-                  <span>Configuraciones</span>
-                </a>
-              </li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-
-              <li>
-                <a
-                  class="dropdown-item d-flex align-items-center"
-                  href="pages-faq.html"
-                >
-                  <i class="bi bi-question-circle"></i>
-                  <span>Necesitas Ayuda?</span>
-                </a>
-              </li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-
-              <li>
-                <a class="dropdown-item d-flex align-items-center" href="#">
+                <a class="dropdown-item d-flex align-items-center" href="index.html">
                   <i class="bi bi-box-arrow-right"></i>
-                  <span>Cerrar Sesion</span>
+                  <span>Cerrar Sesión</span>
                 </a>
               </li>
             </ul>
@@ -266,7 +239,7 @@
             </li>
             <li>
               <a (click)="goTo_edit_list_Ned($event)">
-                <i class="bi bi-circle"></i><span>Editar/Listar Necsidad Curso</span>
+                <i class="bi bi-circle"></i><span>Editar/Listar Necesidad Curso</span>
               </a>
             </li>
             
@@ -281,7 +254,7 @@
             data-bs-toggle="collapse"
             href="#"
           >
-            <i class="bi bi-journal-text"></i><span>Silabo Del Curso</span
+            <i class="bi bi-journal-text"></i><span>Sílabo Del Curso</span
             ><i class="bi bi-chevron-down ms-auto"></i>
           </a>
           <ul
@@ -291,12 +264,12 @@
           >
             <li>
               <a (click)="goToRegistersilab($event)">
-                <i class="bi bi-circle"></i><span>Registrar Silabo Curso</span>
+                <i class="bi bi-circle"></i><span>Registrar Sílabo Curso</span>
               </a>
             </li>
             <li>
               <a (click)="goTo_edit_list_silab($event)">
-                <i class="bi bi-circle"></i><span>Editar/Listar Silabo Curso</span>
+                <i class="bi bi-circle"></i><span>Editar/Listar Sílabo Curso</span>
               </a>
             </li>
            
@@ -500,7 +473,7 @@
             data-bs-toggle="collapse"
             href="#"
           >
-            <i class="bi bi-gem"></i><span>Dias</span
+            <i class="bi bi-gem"></i><span>Días</span
             ><i class="bi bi-chevron-down ms-auto"></i>
           </a>
           <ul
@@ -510,12 +483,12 @@
           >
             <li>
               <a (click)="goToregisdays($event)">
-                <i class="bi bi-circle"></i><span>Registrar dias</span>
+                <i class="bi bi-circle"></i><span>Registrar días</span>
               </a>
             </li>
             <li>
               <a (click)="goTo_edit_list_days($event)">
-                <i class="bi bi-circle"></i><span>Listar/Editar dias</span>
+                <i class="bi bi-circle"></i><span>Listar/Editar días</span>
               </a>
             </li>
           </ul>
@@ -597,7 +570,7 @@
           >
             <li>
               <a (click)="goToeditprofile($event)">
-                <i class="bi bi-circle"></i><span>Edicion Perfil</span>
+                <i class="bi bi-circle"></i><span>Edición Perfil</span>
               </a>
             </li>
             <li>
@@ -775,9 +748,9 @@
         <li class="nav-heading">Pages</li>
 
         <li class="nav-item">
-          <a class="nav-link collapsed" href="pages-login.html">
+          <a class="nav-link collapsed" href="index.html">
             <i class="bi bi-box-arrow-in-right"></i>
-            <span>Log out</span>
+            <span>Cerrar Sesión</span>
           </a>
         </li>
         <!-- End Login Page Nav -->
