--- a/src/app/modules/docente-capacitador/register-dias/pages/register-dias/register-dias.component.html
+++ b/src/app/modules/docente-capacitador/register-dias/pages/register-dias/register-dias.component.html
@@ -17,20 +17,20 @@
       <body style="border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); " >
         <div  style="" class="container mt-2">
           <h1 style="margin-top: 15px; " class="text-center mb-5" >Registro de la  Dias para la creacion del curso</h1>
-          <form id="contenedorform" formControlName="diasForm" [formGroup]="diasForm" (ngSubmit)="registradia()" >
+          <form id="contenedorform" [formGroup]="diasForm" (ngSubmit)="registradia()">
             <h2 class="">Dias para la creacion del curso</h2>
             <div class="">
               <div class="">
-                <label for="diaNombre" class="form-label">Dias  a desarrollar curso</label>
-                <input type="text" id="area" formControlName="diaNombre" name="diaNombre" class="form-control" [(ngModel)]="dias.diaNombre" />
-       
+                <label for="diaNombre" class="form-label">Dias a desarrollar curso</label>
+                <input type="text" id="area" formControlName="diaNombre" name="diaNombre" class="form-control" [(ngModel)]="dias.diaNombre" pattern="^[a-zA-Z\s\W]+$" required />
+              </div>
             </div>
-            </div>
-    
+          
             <div class="mb-3">
               <button type="submit" class="btn btn-primary" style="margin-bottom: 20px; margin-top: 20px;">Enviar</button>
             </div>
           </form>
+          
         </div>
     
        
