--- a/src/app/modules/home/auth/pages/auth/auth.component.html
+++ b/src/app/modules/home/auth/pages/auth/auth.component.html
@@ -60,15 +60,16 @@
     
       <div class="login-container"></div>
       <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
-        <h3>  
+        <h3>
           <img id="imagenlogo" src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
         </h3>
         <label>Ingrese El usuario</label>
-        <input type="text" placeholder="Email or Phone" [(ngModel)]="loginRequest.username" name="username">
+        <input type="text" placeholder="Usuario" [(ngModel)]="loginRequest.username" name="username" required>
         <label>Ingrese La Contraseña</label>
-        <input type="password" placeholder="Password" [(ngModel)]="loginRequest.password" name="password">
-        <button>Iniciar Sesion</button>
+        <input type="password" placeholder="Password" [(ngModel)]="loginRequest.password" name="password" required>
+        <button type="submit">Iniciar Sesion</button>
       </form>
+      
     </div>
   </div>
 </body>
