--- a/src/app/modules/docente-capacitador/edit-list-asistencia/pages/edit-list-asistencia/edit-list-asistencia.component.html
+++ b/src/app/modules/docente-capacitador/edit-list-asistencia/pages/edit-list-asistencia/edit-list-asistencia.component.html
@@ -24,6 +24,7 @@
         </div>
     </div>
 </div>
+<div>
 <div class="container" style="background-color: #ffffff;">
     <div class="container2" *ngIf="showContainer2">
         <!-- Breadcrumb -->
@@ -60,7 +61,7 @@
 
     </div>
 </div>
-<div class="container" style="background-color: #ffffff;">
+<div class="containerj" style="background-color: #ffffff;">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <div class="container" *ngIf="showContainer3">
@@ -99,7 +100,7 @@
         </table>
     </div>
 </div>
-<div class="container" style="background-color: #ffffff;">
+<div class="containerj" style="background-color: #ffffff;">
     <div class="container2" *ngIf="showContainer4">
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb" class="main-breadcrumb my-nav">
@@ -120,7 +121,7 @@
 
         <div class="row">
             <div class="col-md-12 col-xl-12">
-                <div class="container" style="background-color: #ffffff;">
+                <div class="containerh" style="background-color: #ffffff;">
                     <br>
                     <h5>Listado de estudiantes</h5>
                     <table class="table">
@@ -152,7 +153,7 @@
         </div>
     </div>
 </div>
-<div class="container" style="background-color: #ffffff;">
+<div class="containeru" style="background-color: #ffffff;">
     <div class="container3" *ngIf="showContainer5">
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb" class="main-breadcrumb my-nav">
