--- a/src/app/modules/docente-capacitador/register-curso/pages/register-curso/register-curso.component.html
+++ b/src/app/modules/docente-capacitador/register-curso/pages/register-curso/register-curso.component.html
@@ -63,7 +63,7 @@
               curso.</small>
           </div>
           
-          <div class="mb-3">
+          <div class="mb-3" style="text-align: center;">
             <img *ngIf="imagePreview" class="img-thumbnail" [src]="imagePreview" alt="Previsualización de la foto"
               id="preview" />
           </div>
