--- a/src/app/modules/docente-capacitador/register-fotografico/pages/register-fotografico/register-fotografico.component.html
+++ b/src/app/modules/docente-capacitador/register-fotografico/pages/register-fotografico/register-fotografico.component.html
@@ -159,7 +159,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="editModalLabel">
-              Editar Registro Fotogreafico
+              Editar Registro Fotográfico
             </h5>
             <button
               type="button"
