--- a/src/app/modules/docente-capacitador/vista-perfil-docente/pages/vista-perfil-docente/vista-perfil-docente.component.html
+++ b/src/app/modules/docente-capacitador/vista-perfil-docente/pages/vista-perfil-docente/vista-perfil-docente.component.html
@@ -6,8 +6,8 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle"
-                width="150">
+              <img src="https://png.pngtree.com/png-vector/20190803/ourlarge/pngtree-teacher-education-presentation-school--flat-color-icon--vecto-png-image_1648907.jpg " alt="Admin" class="rounded-circle"
+                width="250">
               <div class="mt-3">
                 <h4>{{persona.nombre}} {{persona.apellido}}</h4>
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
