--- a/src/app/modules/docente-capacitador/edit-dts-docentes/pages/edit-dts-docentes/edit-dts-docentes.component.html
+++ b/src/app/modules/docente-capacitador/edit-dts-docentes/pages/edit-dts-docentes/edit-dts-docentes.component.html
@@ -6,8 +6,8 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
-                                class="rounded-circle" width="150">
+                            <img src="https://png.pngtree.com/png-vector/20190803/ourlarge/pngtree-teacher-education-presentation-school--flat-color-icon--vecto-png-image_1648907.jpg " alt="Admin"
+                                class="rounded-circle" width="250">
                             <div class="mt-3">
 
                                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
@@ -82,7 +82,7 @@
                                     <input type="date" class="form-control" id="inputApellido"
                                         placeholder="Ingrese su fecha de nacimiento" name="fecha_nacimiento"
                                         [(ngModel)]="persona.fecha_nacimiento" (ngModelChange)="compararEdad()">
-                                    <small class="text-danger" *ngIf="!valfechan">Fecha Invalida.</small>
+                                    <small class="text-danger" *ngIf="!valfechan">Fecha Inválida.</small>
                                 </div>
                                 
 
