--- a/src/app/modules/docente-capacitador/edit-list-dias/pages/edit-list-dias/edit-list-dias.component.html
+++ b/src/app/modules/docente-capacitador/edit-list-dias/pages/edit-list-dias/edit-list-dias.component.html
@@ -1,94 +1,76 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Registro de la Días para la creación del curso</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
 
+<body style="border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); ">
 
-  <!-- 
-     diaId?: number;
-    diaNombre?: string;
-    diaEstado?:boolean;
- -->
- <!DOCTYPE html>
- <html lang="es">
-   <head>
-     <meta charset="UTF-8" />
-     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <title>Registro de la  Dias para la creacion del curso</title>
-     <link
-       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-       rel="stylesheet"
-     />
-   </head>
-   
-   <body style="border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); " >
-    
-      
-      <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Editar Dia</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form   [formGroup]="editdiasForm" *ngIf="diaSeleccionada" novalidate>
-                <label for="diaNombre" class="form-label">Dias  a desarrollar curso</label>
-                <input type="text" id="diaNombre"  formControlName="diaNombre" name="diaNombre" class="form-control"  [(ngModel)]="diaSeleccionada.diaNombre" />
-            
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Editar Día</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form [formGroup]="editdiasForm" *ngIf="diaSeleccionada" novalidate>
+            <label for="diaNombre" class="form-label">Días a desarrollar curso</label>
+            <input type="text" id="diaNombre" formControlName="diaNombre" name="diaNombre" class="form-control"
+              [(ngModel)]="diaSeleccionada.diaNombre" />
 
-            </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              <button type="button" class="btn btn-primary" (click)="editadia(diaSeleccionada,diaSeleccionada.diaId)">Actualizar</button>
-            </div>
-          </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary"
+            (click)="editadia(diaSeleccionada,diaSeleccionada.diaId)">Actualizar</button>
         </div>
       </div>
+    </div>
+  </div>
 
-    <div  style="" class="container mt-2">
-        
-       <h1 style="margin-top: 15px; " class="text-center mb-5">Listado de los  Dias para la creacion del curso</h1>
-      
-       <div class="table-responsive">
-        <table class="table">
-          
-            <caption>LISTA DE DIAS</caption>
-            <thead>
-              <tr class="bg-primary text-light">
-                <th scope="col">ID</th>
-                <th scope="col">DIA CREADO</th>
-                <th scope="col"> EDITAR</th>
-                <th scope="col"> ELIMINAR</th>
-                
-              </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let di of dia ">
-                    <td>{{ di.diaId}} </td>
-                    <td>{{ di.diaNombre}} </td>
-                   
-      
-                      <td>
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="selecdia(di,di.diaId)" > Editar</button>
-                       
-                      </td>
-                      <td>
-                        <button id="btnnes" style="padding-left: 25px;padding-right: 25px; background-color: red;" type="button" class="btn btn-primary" (click)="eliminar(di.diaId)"   data-target="#Employee">Eliminar</button>
+  <div class="container mt-2">
 
-                      </td>
-                  </tr>
-            </tbody>
-          </table>
-      </div> 
+    <h1 style="margin-top: 15px; " class="text-center mb-5">Listado de los Días para la creación del curso</h1>
 
+    <div class="table-responsive">
+      <table class="table">
 
+        <thead>
+          <tr class="bg-primary text-light">
+            <th scope="col">#</th>
+            <th scope="col">Día</th>
+            <th scope="col"> Editar</th>
+            <th scope="col"> Eliminar</th>
 
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let di of dia ">
+            <td>{{ di.diaId}} </td>
+            <td>{{ di.diaNombre}} </td>
+            <td>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                (click)="selecdia(di,di.diaId)"> Editar</button>
 
+            </td>
+            <td>
+              <button id="btnnes" style="padding-left: 25px;padding-right: 25px; background-color: red;" type="button"
+                class="btn btn-primary" (click)="eliminar(di.diaId)" data-target="#Employee">Eliminar</button>
 
-     </div>
- 
-    
-   </body>
- </html>
- 
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</body>
+
+</html>
