--- a/src/app/modules/docente-capacitador/register-dias/pages/register-dias/register-dias.component.html
+++ b/src/app/modules/docente-capacitador/register-dias/pages/register-dias/register-dias.component.html
@@ -8,20 +8,20 @@
       <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Registro de la  Dias para la creacion del curso</title>
+        <title>Registro de los  Días para la creación del curso</title>
         <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
         />
       </head>
       <body style="border-radius: 15px; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4); " >
-        <div  style="" class="container mt-2">
-          <h1 style="margin-top: 15px; " class="text-center mb-5" >Registro de la  Dias para la creacion del curso</h1>
+        <div class="container mt-2">
+          <h1 style="margin-top: 15px; " class="text-center mb-5" >Registro de la  Días para la creación del curso</h1>
           <form id="contenedorform" [formGroup]="diasForm" (ngSubmit)="registradia()">
-            <h2 class="">Dias para la creacion del curso</h2>
+            <h2 class="">Días para la creación del curso</h2>
             <div class="">
               <div class="">
-                <label for="diaNombre" class="form-label">Dias a desarrollar curso</label>
+                <label for="diaNombre" class="form-label">Días a desarrollar curso</label>
                 <input type="text" id="area" formControlName="diaNombre" name="diaNombre" class="form-control" [(ngModel)]="dias.diaNombre" pattern="^[a-zA-Z\s\W]+$" required />
               </div>
             </div>
