--- a/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.html
+++ b/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.html
@@ -198,7 +198,7 @@
                 <th scope="col">Promedio</th>
                 <th scope="col">Observaciones</th>
                 <th scope="col">Estado</th>
-                <th scope="col">editar</th>
+                <th scope="col">Editar</th>
             </tr>
         </thead>
         <tbody>
