--- a/src/app/modules/docente-capacitador/register-participante/pages/register-participante/register-participante.component.html
+++ b/src/app/modules/docente-capacitador/register-participante/pages/register-participante/register-participante.component.html
@@ -38,7 +38,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                            <img src="https://cdn-icons-png.flaticon.com/512/4196/4196591.png                            " alt="Admin"
                                 class="rounded-circle" width="150">
                             <div class="mt-3">
 
